--- a/src/app/body/users-update-proposal/users-update-proposal.component.html
+++ b/src/app/body/users-update-proposal/users-update-proposal.component.html
@@ -29,7 +29,12 @@
 
 </div>
 <mat-progress-bar *ngIf="isLoadingAllUsersItems" mode="indeterminate"></mat-progress-bar>
-<div class="row" *ngIf="!isLoadingAllUsersItems">
+<div class="center"  *ngIf="!isLoadingAllUsersItems && allUsersItems.length ==0 && proposedItems.length == 0">
+  <h2 class="text-secondary">
+    Vous n'avez pas d'Items <a href="/user/items-management">ajouter</a> au moin un pour présenter des propositions aux offres disponibles.
+  </h2>
+</div>
+<div class="row" *ngIf="!isLoadingAllUsersItems && (allUsersItems.length >0 || proposedItems.length > 0)">
 
   <div class="col-12">
 
