--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,26 +35,35 @@
     </div>-->
   </div>
   <div class="row">
-    <div class="col-2 offset-5 form-check" style="text-align:center">
+    <div class="col-md-4 col-sm-4 offset-md-4 form-check" style="text-align:center">
 
       <div style="text-align:center">
-        <button mat-raised-button color="primary" class="btn btn-primary btn-lg btn-block" [class.spinner]="isLoading" [disabled]="isLoading"
+        <button   class="btn btn-primary" [class.spinner]="isLoading" [disabled]="isLoading"
                 (click)="onLogin()">Se connecter
         </button>
+        <p><small class="alert-danger">{{errorMessage}}</small></p>
       </div>
     </div>
+
   </div>
   <div class="row" style="margin-top:15px;">
-  <div class="col-2 offset-5 form-check" style="text-align:center">
+  <div class="col-md-2 offset-md-4 form-check" style="text-align:center">
     <div style="text-align:center">
-        <button mat-raised-button class="btn btn-link btn-lg btn-block" [disabled]="isLoading"
+        <button class="btn btn-link" [disabled]="isLoading"
                 [routerLink]="['/subscribe']">Inscription
         </button>
       </div>
 
+    </div>
 
+    <div class="col-md-2 form-check" style="text-align:center">
+      <div style="text-align:center">
 
-      <small class="alert-danger">{{errorMessage}}</small>
+        <button class="btn btn-link" [disabled]="isLoading"
+                (click)="onResetPassword()">mot de passe oublié
+        </button>
+      </div>
+
     </div>
   </div>
 </form>
