--- a/src/app/user/profile-management/password-edit/password-edit.component.html
+++ b/src/app/user/profile-management/password-edit/password-edit.component.html
@@ -1,28 +1,79 @@
-<form [formGroup]="form">
-  <div class="container-fluid">
+<div class="container-fluid" >
   <div class="row">
-    <div class="col-md-4">
-     <p>Ancien mot de passe</p>
-    </div>
-    <div class="col-md-4">
-      <input type="text" formControlName="password">
+    <div class="col-md-4 offset-md-3 text-secondary" >
+      <h1 style="align-items: center">Modification du mot de passe:</h1>
     </div>
   </div>
+  <form [formGroup]="form">
     <div class="row">
-      <div class="col-md-4">
-        <p>Nouveau mot de passe</p>
+      <div class="col-md-4 offset-md-3">
+        <mat-form-field>
+          <mat-label>Mot de passe</mat-label>
+          <input matInput formControlName="password" placeholder="" type="password"
+                 required>
+        </mat-form-field>
+
+        <div class="invalid-feedback d-block"
+             *ngIf="form.controls.password.invalid  &&  (form.controls.password.dirty || form.controls.password.touched)">
+          <div *ngIf="form.controls.password.errors?.['required']">le mot de passe est requis.</div>
+          <div *ngIf="form.controls.password.errors?.['pattern']"> Le mot de passe doit contenir au moins 8 caractères
+            avec des majuscules, des minuscules, des chiffres et des caractères spéciaux..
+          </div>
+        </div>
       </div>
-      <div class="col-md-4">
-        <input type="text" formControlName="newPassword">
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 offset-md-3">
+        <mat-form-field>
+          <mat-label>Nouveau mot de passe</mat-label>
+          <input matInput formControlName="newPassword" placeholder="" type="password"
+                 required>
+        </mat-form-field>
+
+        <div class="invalid-feedback d-block"
+             *ngIf="form.controls.newPassword.invalid  &&  (form.controls.newPassword.dirty || form.controls.newPassword.touched)">
+          <div *ngIf="form.controls.newPassword.errors?.['required']">le mot de passe est requis.</div>
+          <div *ngIf="form.controls.newPassword.errors?.['pattern']"> Le mot de passe doit contenir au moins 8
+            caractères
+            avec des majuscules, des minuscules, des chiffres et des caractères spéciaux..
+          </div>
+        </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
-        <p>Ancien mot de passe</p>
+      <div class="col-md-4 offset-md-3">
+        <mat-form-field>
+          <mat-label>Confirmation</mat-label>
+          <input matInput formControlName="repassword" placeholder="Confirmation" type="password"
+                 required>
+        </mat-form-field>
+
+        <div class="invalid-feedback d-block"
+             *ngIf="form.controls.repassword.invalid  &&  (form.controls.repassword.dirty || form.controls.repassword.touched)">
+          <div *ngIf="form.controls.repassword.errors?.['required']">le confirmation du mot de passe est requise.</div>
+          <div *ngIf="form.controls.repassword.errors?.['nonCorrespondant']"> Les champs du mot de passe ne
+            correspondent
+            pas.
+          </div>
+        </div>
+        <div class="valid-feedback d-block"
+             *ngIf="form.controls.repassword.valid ">
+          <div>la confirmation correspond.</div>
+        </div>
       </div>
-      <div class="col-md-4">
-        <input type="text" formControlName="repassword">
+
+
+    </div>
+    <div class="row">
+      <div class="col-md-4 offset-md-3">
+        <button  [class.spinner]="isSaving" class="btn btn-primary btn-block" [disabled]="!form.valid || isSaving" (click)="onUpdate()">Mettre à jour</button>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-4 offset-md-3">
+        <p class="text-danger">{{errorMessage}}</p>
+      </div>
+    </div>
+  </form>
 </div>
-</form>
