--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,13 @@
-<!--<footer class="art-footer">
-  <div class="art-footer-inner">
-    <p><a href="#">Link1</a> | <a href="#">Link2</a> | <a href="#">Link3</a></p>
-    <p>Copyright © 2023. All Rights Reserved.</p>
-    <p class="art-page-footer">
-      <span id="art-footnote-links"><a href="http://www.artisteer.com/" target="_blank">Web Template</a> created with Artisteer.</span>
-    </p>
+
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 text-center text-lg-start">
+        <p class="mb-0">Tous droits réservés LetApp {{ currentYear }}</p>
+      </div>
+      <div class="col-lg-6 text-center text-lg-end">
+        <a href="/terms-of-service" class="footer-link">Conditions d'utilisation</a>
+      </div>
+    </div>
   </div>
-</footer>-->
+</footer>
